--- a/README.org
+++ b/README.org
@@ -9,11 +9,11 @@
 *** Debugging
 *** Testing
 
-*** Contributing
+** Contributing
 Please read [[./CONTRIBUTING.md][CONTRIBUTING.md]] for details on our code of conduct, and the process for submitting pull requests to us.
-*** Versioning
+** Versioning
 We use [[http://semver.org/][SemVer]] for versioning. For the versions available, see the tags on this repository.
-*** Authors
+** Authors
 Md. Alamin Mahamud - =initial-work=
-*** License
+** License
 This project is licensed under the MIT License - see the [[./LICENSE][LICENSE]] file for details
